Add exposed/concealed kong meshes

--- a/src/App.css
+++ b/src/App.css
@@ -23,9 +23,33 @@ main {
 }
 
 #ui {
+  width: 100%;
+  height: 100%;
+  position: relative;
   display: flex;
-  background-color: wheat;
+  flex-direction: column;
+  color: #fff;
+  font-family: Poppins, sans-serif;
   cursor: auto;
+  justify-content: start;
+}
+
+#top {
+  padding: 16px;
+  border-radius: 8px;
+  text-align: center;
+  margin: auto;
+  background: #00000033;
+}
+
+#center {
+  display: flex;
+  justify-content: start;
+}
+
+#left {
+  padding: 16px;
+  background: #00000033;
 }
 
 @media (min-width: 640px) {
